@@ -642,3 +642,92 @@ else
 	worker.coroutine = disabled
 	worker.bg_worker = setmetatable({}, { __index = disabled })
 end
+
+-- Global commands - map()
+ffi.cdef([[
+	typedef struct __dirstream DIR;
+	struct dirent {
+		unsigned long int	d_ino;
+		long int		d_off;
+		unsigned short		d_reclen;
+		unsigned char		d_type;
+		char			d_name[256];
+	};
+	DIR *opendir(const char *name);
+	struct dirent *readdir(DIR *dirp);
+	int closedir(DIR *dirp);
+	char *strerror(int errnum);
+]])
+
+function map(cmd, format)
+	local socket = require('cqueues.socket')
+	local kluautil = require('kluautil')
+	local bit = require("bit")
+	local local_sockets = {}
+	local results = {}
+
+	format = format or 'luaobj'
+	if format ~= 'luaobj' and format ~= 'strings' then
+		warn('warning: Unknown map format. Used "luaobj".')
+		format = 'luaobj'
+	end
+
+	for _,v in pairs(net.list()) do
+		if (v['kind'] == 'control') and (v['transport']['family'] == 'unix') then
+			table.insert(local_sockets, string.match(v['transport']['path'], '^.*/([^/]+)$'))
+		end
+	end
+
+	local filetab = kluautil.list_dir(worker.control_path)
+	if next(filetab) == nil then
+		local ret = eval_cmd(cmd, true)
+		if ret == nil then
+			results = {}
+		else
+			table.insert(results, ret)
+		end
+		return results
+	end
+
+	for _,file in ipairs(filetab) do
+		local local_exec = false
+		for _,lsoc in ipairs(local_sockets) do
+			if file == lsoc then
+				local_exec = true
+			end
+		end
+
+		if local_exec then
+			table.insert(results, eval_cmd(cmd, true))
+		else
+			local s = socket.connect({ path = worker.control_path..file })
+			s:setmode('bn', 'bn')
+			local status, err = pcall(s.connect, s)
+			if not status then
+				print(err)
+			else
+				s:write('__binary\n')
+				recv = s:read(2)
+				if format == 'luaobj' then
+					cmd = 'tojson('..cmd..')'
+				end
+				s:write(cmd..'\n')
+				local recv = s:read(4)
+				local len = tonumber(recv:byte(1))
+				for i=2,4 do
+					len = bit.bor(bit.lshift(len, 8), tonumber(recv:byte(i)))
+				end
+				recv = s:read(len)
+				if format == 'strings' then
+					table.insert(results, recv)
+				else
+					table.insert(results, fromjson(recv))
+				end
+
+				s:close()
+			end
+		end
+	end
+
+	return results
+end
